--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,6 @@ a:hover {
   text-decoration: underline;
 }
 
-
 .header {
   text-align: center;
   font-size: 1.1rem;
@@ -47,7 +46,6 @@ a:hover {
   line-height: 1.5;
   border: #eeeeee solid 1px;
   border-radius: 10px;
-
 }
 
 .image-container {
@@ -79,7 +77,7 @@ a:hover {
   font-size: 1.25rem;
 }
 
-.time-line li{
+.time-line li {
   margin-top: 1rem;
 }
 
@@ -88,4 +86,22 @@ a:hover {
   font-style: italic;
   text-align: center;
   color: #eeeeee;
+}
+
+.github-logo {
+  vertical-align: bottom;
+  margin-left: 0.5rem;
+  position: relative;
+  top: 4px;
+}
+
+/* Smartphones (portrait and landscape)  */
+@media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
+  .image-container img {
+    width: 100%;
+  }
+
+  .container {
+    padding: 1rem;
+  }
 }
